<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="12dp">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search"

        />

    <LinearLayout
        android:id="@+id/ll_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radio_group_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_sort_asc" />

            <RadioButton
                android:id="@+id/radioDec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_sort_dec" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/ll_sort">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Select Price Range (500-1500)"
            android:textColor="@color/colorBlack" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="true"
            android:valueFrom="500"
            android:valueTo="1500"
            app:values="@array/initial_slider_values" />


        <LinearLayout
            android:id="@+id/ll_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/radio_group_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio3xl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3XL" />

                <RadioButton
                    android:id="@+id/radio2xl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2XL" />

                <RadioButton
                    android:id="@+id/radioXl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="XL" />

                <RadioButton
                    android:id="@+id/radioL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="L" />

                <RadioButton
                    android:id="@+id/radioM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M" />

                <RadioButton
                    android:id="@+id/radioS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S" />

                <RadioButton
                    android:id="@+id/radioXS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="XS" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"

                    android:text="@string/submit" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnClear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:textColor="@color/colorPrimary"
                    android:backgroundTint="@color/colorBackground"
                    android:layout_weight="1"

                    android:text="@string/clear" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/ll_filter"
        tools:listitem="@layout/item_bikes" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/results_error"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnRetry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/emptyTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>